--- a/src/main/resources/templates/verduras.html
+++ b/src/main/resources/templates/verduras.html
@@ -13,12 +13,13 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
     </head>
     <body>
         <h1 th:text="${titulo}"></h1>
-        <table class="table table-dark table-striped"></table>
+        <table class="table table-dark table-striped">
     <thead class="thead-dark"> 
         <tr>
             <th scope="col">Nombre </th>
             <th scope="col">Cantidad </th>
             <th scope="col">Precio </th>
+            <th scope="col">verdulerias </th>
             <th scope="col">Editar </th>
             <th scope="col">Eliminar </th>
         </tr>
@@ -43,6 +44,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                 <a th:href="@{/delete/{id}(id=${user.getId})}">Delete</a>
             </td>
         </tr>
+        </table>
     </th:block>
 </tbody>
 </body>
