--- a/src/main/resources/templates/crear.html
+++ b/src/main/resources/templates/crear.html
@@ -11,7 +11,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     </head>
     <body>
-        <div>class="container"</div>
+        <div class="container"></div>
 
         <div class="card-header bg-black text-white"> </div>
         <div class="card-body">
@@ -46,10 +46,10 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                     <div class="form-group mb-3 row">
                         <label class="form-control-sm col-form-label col-md-2" for="verdulerias">Verdulerias</label>
                         <div class="col-sm-10">
-                            <select th:field="*{verdulerias}" class="form-control form-control-sm col-md-6" id="verdulerias" aria-describedby="emailHelp">
+                            <select th:field="*{verdulerias_local}" class="form-control form-control-sm col-md-6" id="verdulerias_local" aria-describedby="emailHelp">
                                 <option th:each="x:${verdulerias}"
                                         th:value="${x.id}"
-                                        th:text="${x.verdulerias}"/>
+                                        th:text="${x.verdulerias_local}"/>
                             </select>
                         </div>
                     </div>
