--- a/src/main/resources/templates/verduras.html
+++ b/src/main/resources/templates/verduras.html
@@ -13,27 +13,25 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
     </head>
     <body>
         <h1 th:text="${titulo}"></h1>
-        <table class="table table-dark table-striped"></table>
-    <thead class="thead-dark"> 
+        <table class="table table-striped table-hover">
+            <thead class="table-striped"> 
         <tr>
             <th scope="col">Nombre </th>
             <th scope="col">Cantidad </th>
             <th scope="col">Precio </th>
+            <th scope="col">Verdurias </th>
             <th scope="col">Editar </th>
             <th scope="col">Eliminar </th>
         </tr>
     </thead>
 
-    <!-- Por cada usuario en personas quiero que haga lo siguiente  -->
-    <!-- Table row (tr) donde quiero obtener el valor -->
-    <!-- Table row (tr) donde quiero obtener el valor -->
     <tbody>
     <th:block th:each="user : ${verduras}">
         <tr>
             <td th:text="${user.getNombre}"></td>
             <td th:text="${user.getCantidad}"></td>
             <td th:text="${user.getPrecio}"></td>
-            <td th:text="${user.getVerdulerias.getVerdulerias}"></td>
+            <td th:text="${user.getVerdulerias_local.getVerdulerias_local}"></td>
 
             <td>
                 <a th:href="@{/editVerduras/{id}(id=${user.getId})}">Edit</a>
@@ -41,9 +39,10 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
 
             <td>
                 <a th:href="@{/delete/{id}(id=${user.getId})}">Delete</a>
-            </td>
-        </tr>
-    </th:block>
-</tbody>
+                    </td>
+                </tr>
+            </th:block>
+        </tbody>
+    </table>
 </body>
 </html>
